Add new path
